<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_body_type"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="link.fitbody.BodyTypeActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/body"
        android:id="@+id/imageView3"
        android:layout_weight="1"
        android:padding="@dimen/activity_vertical_margin" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/body_type_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <TextView
            android:text="Please, fill in the data bellow:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/introMsgTextView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/bustEditText"
            android:hint="@string/bust_hint"
            android:inputType="number"
            android:imeOptions="actionNext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/waistEditText"
            android:hint="@string/waist_hint"
            android:inputType="number"
            android:imeOptions="actionNext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/hipEditText"
            android:hint="@string/hip_hint"
            android:inputType="number"
            android:imeOptions="actionGo" />

        <Button
            android:text="@string/calculate_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calculateButton"
            android:onClick="onCalculateClick"/>

    </LinearLayout>
</LinearLayout>
